--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "classname": "0.0.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-countdown": "^2.3.2",
